# latence-trace-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: errors.md  integrations.md  phase5_integration_checkpoint.md  phase5_integration_proof.runpod.json  publishing.md  quickstart.md  sessions.md
examples/: async_batch.py  code_grounding.py  compression.py  memory_step.py  privacy_redact.py  quickstart.py  rag_grounding_guard.py  session_facade.py
examples/phase5/: .env.example  README.md  coding_langgraph.py  librechat_openrouter_proxy.py  rag_native_langchain_llamaindex.py
examples/phase5/n8n/: trace-coding-workflow.json  trace-privacy-memory-workflow.json  trace-rag-workflow.json
scripts/: check_contract.py  prove_phase5_integrations.py
src/latence/: __init__.py  _contract.py  _transport.py  async_client.py  client.py  errors.py  models.py  sessions.py
src/latence/integrations/: __init__.py  _band_utils.py  _trace.py  autogen.py  crewai.py  haystack.py  langchain.py  langgraph.py  llama_index.py  openai.py  pydantic_ai.py
tests/: test_client.py  test_contract_script.py  test_integrations_contract.py
