[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "latence"
version = "0.1.4"
description = "Thin Python SDK for Latence TRACE."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "latence.ai", email = "support@latence.ai" }]
keywords = [
  "agents",
  "groundedness",
  "hallucination-detection",
  "rag",
  "trace",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
otel = [
  "opentelemetry-api>=1.24",
  "opentelemetry-instrumentation-httpx>=0.45b0",
]
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.0.50"]
llama_index = ["llama-index-core>=0.10"]
openai = ["openai>=1.30"]
haystack = ["haystack-ai>=2.0"]
crewai = ["crewai>=0.30"]
autogen = ["pyautogen>=0.2.30"]
pydantic_ai = ["pydantic-ai>=0.1"]
all = [
  "haystack-ai>=2.0",
  "langchain-core>=0.2",
  "langgraph>=0.0.50",
  "llama-index-core>=0.10",
  "openai>=1.30",
  "crewai>=0.30",
  "pyautogen>=0.2.30",
  "pydantic-ai>=0.1",
  "opentelemetry-api>=1.24",
  "opentelemetry-instrumentation-httpx>=0.45b0",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.20",
  "ruff>=0.6",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://latence.ai"
Documentation = "https://docs.latence.ai"
Repository = "https://github.com/latenceainew/latence-trace-python"
Issues = "https://github.com/latenceainew/latence-trace-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latence"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
